--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,17 @@ a {
   text-decoration: none;
 }
 
+header{
+  height:65px;
+  width:100%;
+  background-color: rgba(34, 49, 52, 0.9);
+}
+
+.logo{
+  width:124px;
+  margin-top: 20px;
+}
+
 .container{
   width:1170;
   padding:0 15px;
